# andavar

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  SKILL.md  app.py  auth.py  config.py  entrypoint.sh  models.py  pyproject.toml  rate_limit.py  requirements.txt
.github/workflows/: ghcr-build.yml
agents/: __init__.py  chat_agent.py  explainer.py  mock_data_generator.py  root_agent.py  schema_designer.py  sql_generator.py
frontend/: index.html
routes/: projects.py  reports.py  users.py
tools/: __init__.py  crypto.py  db_tools.py  gemini_model.py  memory_store.py  neon_mcp.py  schema_diff.py  validator.py
