[project]
name = "andavar"
version = "0.1.0"
description = "Multi-agent PostgreSQL schema designer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "google-adk>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "slowapi>=0.1.8",
    "httpx>=0.24.0",
    "jinja2>=3.1.2",
    "google-genai>=0.1.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
